# duckpoc

./: README.md  app.py  database.py  main.py  populate_db.py  pyproject.toml  schema.sql  schemas.py
models/: database_models.py  schemas.py
routes/: __init__.py  auth.py  collections.py  history.py  saved_searches.py  search.py
services/: auth.py
static/css/: style.css
static/js/: search.js
templates/: base.html  collections.html  saved_searches.html
templates/auth/: login.html
